Several spacing and text-size fixes to address display issues on iphone
Closes #1176

--- a/pombola/core/static/css/south-africa.css
+++ b/pombola/core/static/css/south-africa.css
@@ -4671,6 +4671,11 @@ ul.pager li.next {
   color: #222222;
   text-decoration: none;
 }
+@media only all and (max-width: 640px), print {
+  .list-of-constituency-offices a {
+    margin-right: 5em;
+  }
+}
 .list-of-constituency-offices a:hover, .list-of-constituency-offices a:focus {
   color: #e23d28;
   text-decoration: underline;
@@ -4794,7 +4799,12 @@ ul.pager li.next {
   background: #fff;
   margin-bottom: 3px;
   text-decoration: none;
-  font-size: 0.875em;
+  font-size: 0.75em;
+}
+@media only all and (min-width: 640px), print {
+  .tab-links li a {
+    font-size: 0.875em;
+  }
 }
 .tab-links li a.active {
   border-bottom: 3px solid #d2d2ce;
