--- a/pombola/core/static/sass/_south-africa_overrides.scss
+++ b/pombola/core/static/sass/_south-africa_overrides.scss
@@ -1597,6 +1597,9 @@ ul.pager {
     a {
         color: $colour-black;
         text-decoration: none;
+        @media only all and (max-width: 640px), print {
+            margin-right: 5em;
+        }
         &:hover,
         &:focus {
             color: $colour-primary;
@@ -1726,7 +1729,10 @@ ul.pager {
             background: #fff;
             margin-bottom: 3px;
             text-decoration: none;
-            font-size: 0.875em;
+            font-size: 0.75em;
+            @media only all and (min-width: 640px), print {
+                font-size: 0.875em;
+            }
             &.active {
                 border-bottom: 3px solid #d2d2ce;
                 margin-bottom: 0;
